Bug 112328 - Pivot table, XLS: Popup button for column fields is missing after round trip in Calc
Summary: Pivot table, XLS: Popup button for column fields is missing after round trip ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:6.0.0
Keywords: filter:xls
Depends on:
Blocks: Pivot-Table-XLS
  Show dependency treegraph
 
Reported: 2017-09-11 14:59 UTC by Tamás Zolnai
Modified: 2019-04-18 05:55 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Test document with minimal pivot table (22.50 KB, application/vnd.ms-excel)
2017-09-11 14:59 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2017-09-11 14:59:25 UTC
Description:
After I import and export the attached XLS file with a pivot table in Calc and open the round tripped file in Excel the column field (Country) has no popup button in cell B3.

Steps to Reproduce:
1. Open attached XLS in Calc and resave to an other XLS.
2. Open round tripped XLS in Excel

Actual Results:  
Popup button in cell B3 is missing.

Expected Results:
In cell B3 Excel should display a popup button.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.113 Safari/537.36
Comment 1 Tamás Zolnai 2017-09-11 14:59:56 UTC
Created attachment 136176 [details]
Test document with minimal pivot table
Comment 2 Commit Notification 2017-09-11 22:12:51 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bc9714fefb2dd2ad55a92aaacb6b246f354ed2c0

tdf#112328: Pivot table, XLS: Popup button for column fields is missing

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.