tdf#112328: Pivot table, XLS: Popup button for column fields is missing

...after round trip in Calc

Wrong heading row was exported.

Change-Id: I410eeeff7d7af408de1ea8128b6b21ac0cc76ea5